--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,13 +55,14 @@
 .first-section-img {
     width: 635px;
     height: 800px;
+    background-position: bottom;
 }
 
 .first-image {
     padding-bottom: 0px;
 }
 
-/* second sectio  */
+/* second section  */
 .title-two {
     color: #272727;
     text-align: center;
@@ -126,7 +127,6 @@
     background: rgba(229, 84, 115, 0.05);
     display: flex;
     justify-content: space-around;
-    align-items: center;
 }
 
 .title-three {
@@ -149,9 +149,10 @@
     font-weight: 400;
     line-height: 30px;
 }
-.section-three-left-part{
-    /* width: 50%; */
-    text-align: center;
+
+.section-three-left-part {
+    width: 50%;
+
 }
 
 .third-section-btn {
@@ -162,4 +163,84 @@
     border-radius: 8px;
     background: #E55473;
     color: white;
+}
+
+/* section-fourth  */
+
+.fourth-section-container {
+    display: flex;
+    gap: 15px;
+    margin-left: 250px;
+    margin-top: 20px;
+}
+
+/* section-five */
+
+
+
+/* section-six  */
+
+.bacgraund-image {
+    background-image: url('/flower-shop-assignment/flower-assets/bg-image.png');
+    width: 100%;
+    height: 500px;
+    background-repeat: no-repeat;
+    margin: 100px 100px 100px 50px;
+    margin-left: 250px;
+}
+
+.six-header {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    /* font-weight: 800; */
+    background-position: center;
+
+}
+
+.section-six {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.contact input {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 15px;
+    width: 700px;
+    height: 24px;
+    border: 8px;
+    
+}
+.form-container{
+    display: flex;
+    gap: 15px;
+    text-align: center;
+    
+    
+}
+.six-section-botton{
+    width: 150px;
+height: 64px;
+flex-shrink: 0;
+border-radius: 8px;
+background: #E55473;
+color: white;
+}
+
+/* section-seven  */
+
+.footer {
+    background-color: black;
+    color: white;
+    padding: 50px 0;
+    text-align: center;
+
 }
